# nrbf-rs

./: Cargo.toml  ReadMe.md
src/: combinator.rs  enumeration.rs  error.rs  lib.rs  remoting_message.rs
src/binary_parser/: mod.rs
src/common/: additional_type_info.rs  array_info.rs  class_info.rs  member_type_info.rs  mod.rs
src/data_type/: boolean.rs  byte.rs  char.rs  datetime.rs  decimal.rs  double.rs  int16.rs  int32.rs  int64.rs  int8.rs  length_prefixed_string.rs  mod.rs  single.rs  timespan.rs  uint16.rs  uint32.rs  uint64.rs
src/record/: array_of_value_with_code.rs  array_single_object.rs  array_single_primitive.rs  array_single_string.rs  binary_array.rs  binary_library.rs  binary_method_call.rs  binary_method_return.rs  binary_object_string.rs  class_with_id.rs  class_with_members.rs  class_with_members_and_types.rs  member_primitive_typed.rs  member_primitive_untyped.rs  member_reference.rs  message_end.rs  message_flags.rs  mod.rs  object_null.rs  object_null_multiple.rs  object_null_multiple_256.rs  serialization_header.rs  string_value_with_code.rs  system_class_with_members.rs  system_class_with_members_and_types.rs  value_with_code.rs
src/value/: date_time.rs  (+4 more)
tests/: array_single_primitive.rs  array_single_string.rs  binary_array_jagged.rs  binary_array_jagged_offset.rs  binary_array_rectangular.rs  binary_array_rectangular_offset.rs  binary_array_single_offset.rs  boolean.rs  byte.rs  double.rs  int16.rs  int32.rs  int64.rs  list_of_customers.rs  method_call.rs  method_return.rs  sbyte.rs  single.rs  string.rs  uint16.rs  uint32.rs  uint64.rs
