[package]
name = "nrbf"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
nom = "7.1.3"
rust_decimal = { version = "1.34.3", default-features = false }
serde = { version = "1.0.197", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "rust_decimal/serde"]

[dev-dependencies]
const-str = "0.5.7"
