[package]
name = "nrbf"
version = "0.2.2"
edition = "2024"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A parser for the .NET Remoting Binary Format (NRBF)."
documentation = "https://docs.rs/nrbf"
repository = "https://github.com/reitermarkus/nrbf-rs"
homepage = "https://github.com/reitermarkus/nrbf-rs"
keywords = ["dotnet", "remoting"]

[package.metadata.docs.rs]
features = ["serde"]

[dependencies]
bitflags = "2.5.0"
nom = "8"
rust_decimal = { version = "1.34.3", default-features = false }
serde = { version = "1.0.197", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "rust_decimal/serde"]

[dev-dependencies]
const-str = "0.6.0"
